--- a/workout-app/package.json
+++ b/workout-app/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@nivo/core": "^0.87.0",
+    "@nivo/line": "^0.87.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
